Update 4.1 Apply secure design principles in network architectures.md

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -319,3 +319,200 @@ And what are the challenges in IPv6 Adoption ?
 - Compatibility issues: Some legacy systems do not support IPv6.
 - IPv6 Security: New attack vectors (e.g., rogue Router Advertisements).
 
+The primary objective of any network is to transmit data efficiently and reliably between devices. The Internet Protocol (IP) supports several communication methods to direct data packets between devices, each suited to different network requirements and use cases. These methods include unicast, broadcast, multicast, and anycast, which differ in the number of devices involved and the nature of the data transmission. Let’s take a closer look at each of these methods.
+
+**Unicast** refers to one-to-one communication, where a single sender sends data to a specific destination device, identified by a unique IP address. In unicast communication, the sender specifies the destination address in the packet, and only that device receives the data.
+Unicast Characteristics:
+- One-to-One: Data is transmitted from one sender to one receiver.
+- Point-to-Point Communication: There is a direct, exclusive communication channel between the sender and the receiver.
+- Unique IP Address: Each device involved in unicast communication has a unique IP address.
+
+For example, when you visit a website, your computer sends a request to the server hosting the website. The server replies to your computer specifically. This is a typical unicast communication, where the web server sends the response only to your device.
+Unicast is most commonly used in situations where communication needs to occur between specific devices:
+- Web browsing (HTTP/HTTPS)
+- File transfers (FTP)
+- Email exchanges
+- VoIP calls Unicast ensures that only the intended device receives the data, providing privacy and security in communication.
+
+**Broadcast** refers to one-to-all communication, where a sender sends data to all devices within a specific network. In this mode, the data is transmitted to every device on the network, regardless of whether they need it.
+Broadcast Characteristics are:
+- One-to-All: Data is sent to all devices within a specified network.
+- IP Addressing: Broadcasts use a special broadcast address that all devices on the network can recognize.
+- Network-Wide Transmission: Every device within the local network receives and processes the broadcasted data.
+
+Types of Broadcasts:
+- Limited Broadcast: This type of broadcast is limited to the local network and uses the address 255.255.255.255. It does not get routed to other networks.
+- Directed Broadcast: Directed broadcasts target all devices on a specific network. A directed broadcast uses the network’s address (e.g., 192.168.1.255) to communicate with all devices on that network.
+
+For example when a device wants to discover the MAC address of another device within the same network, it broadcasts an ARP request. Every device on the network will receive the ARP request, but only the device with the matching IP address will reply.
+
+Broadcast is generally used for tasks that require all devices on a local network to process the same message, for example in the following cases:
+- ARP (Address Resolution Protocol)
+- DHCP Discover (for obtaining an IP address in a local network)
+- Service announcements (such as network printers broadcasting their availability)
+
+
+Limitations of Broadcast are:
+- Network Congestion: Broadcasting to all devices in a network can lead to unnecessary network traffic and can be inefficient.
+- Limited to Local Networks: Broadcasts are usually confined to a single network. Routers typically do not forward broadcast packets to other networks, limiting the scalability.
+
+**Multicast** refers to one-to-many communication, where data is sent from a sender to multiple specific devices in a network or across networks, but not to all devices. Unlike broadcast, multicast communication only targets a defined group of receivers, known as a multicast group.
+Multicast Characteristics are:
+- One-to-Many: Data is sent to a selected group of devices (known as multicast group members) instead of all devices.
+- IP Addressing: Multicast uses special IP address ranges within IPv4 (224.0.0.0 to 239.255.255.255) and IPv6 (ff00::/8).
+- Efficient Bandwidth Use: Since the data is sent only to the members of the group, it conserves bandwidth and reduces network congestion compared to broadcast.
+- Group Membership: Devices must explicitly join a multicast group to receive the data being sent to that group.
+
+When a device wants to receive multicast traffic, it sends an IGMP (Internet Group Management Protocol) message to its local router requesting to join a multicast group. Once the router receives this request, it ensures that multicast traffic destined for that group is forwarded to the device.
+
+For example a server can stream live video to multiple clients (e.g., an online webinar) using multicast. Only the clients who have joined the multicast group receive the stream, unlike broadcast where all clients would receive the same stream. Multicast is used in applications where a single data stream needs to be delivered to multiple devices without consuming excessive bandwidth.
+
+**Anycast** refers to a one-to-nearest communication model, where data is sent from a sender to the nearest member of a group of devices, typically based on network topology or routing algorithms. Anycast allows data to be routed to the closest available server or device that is part of the anycast group.
+
+Anycast Characteristics are:
+- One-to-Nearest: Data is routed to the nearest member of an anycast group based on routing protocols.
+- Routing-Based Decision: The “nearest” device is determined based on network topology and routing algorithms (e.g., BGP – Border Gateway Protocol).
+- IP Addressing: Anycast uses a single IP address shared by multiple devices, typically deployed for services like DNS.
+
+For example a DNS query for www.example.com can be routed to the nearest DNS server in the network, improving response time and reliability. If one DNS server goes down, others can take over the responsibility without interruption.
+CDNs (Content Delivery Networks) use anycast to route user requests to the nearest server that can deliver the requested content (e.g., videos, images), optimizing performance and reducing latency.
+Anycast is commonly used in scenarios where low-latency access to services is required and multiple servers are available to handle requests:
+- DNS Servers
+- Content Delivery Networks (CDNs)
+- Distributed Services like cloud-based applications
+
+Here a comparison table of the different communications type seen so far:
+| Communication Type | Target            | Addressing                        | Efficiency             | Example use                               |
+|--------------------|------------------|-----------------------------------|------------------------|-------------------------------------------|
+| Unicast            | One device       | Unique IP Address                 | Direct and Secure      | Web browsing, VoIP calls, File transfer   |
+| Broadcast          | All devices      | Broadcast IP (e.g., 255.255.255.255) | Inefficient, congestion | ARP, DHCP Discover                        |
+| Multicast          | Selected group   | Multicast IP Range (224.x.x.x)    | Efficient, scalable    | Live video/audio streaming, IPTV          |
+| Anycast            | Nearest device   | Shared IP Address                 | Fast, scalable         | DNS, CDN, load balancing                  |
+
+**ICMP (Internet Control Message Protocol)** is a core protocol used by network devices to communicate error messages and diagnostic information about network operations. It is essential for managing and troubleshooting network connectivity.
+
+ICMP Characteristics are:
+- Error Reporting: ICMP helps in reporting errors such as unreachable destinations or time exceeded in routing.
+- Diagnostics: ICMP is used in utilities like ping and traceroute, which help in diagnosing network connectivity issues.
+
+Common ICMP Messages:
+- Echo Request & Echo Reply: Used by the ping command to test connectivity between devices.
+- Destination Unreachable: Indicates that a router or destination device is unreachable.
+- Time Exceeded: Sent when a packet’s TTL (Time to Live) reaches zero, indicating that the packet has been circulating too long in the network.
+- Redirect: Informs a device that a better route is available.
+
+ICMP is used primarily for network diagnostics, allowing administrators to check if devices are reachable, measure round-trip time, and identify network issues.
+
+IGMP (Internet Group Management Protocol) is used by hosts and adjacent routers to establish multicast group memberships. It operates at the network layer and enables devices to inform their local routers about their multicast group memberships.
+How IGMP Works:
+- Devices that want to join a multicast group send an IGMP report to the local router.
+- The router then ensures that multicast traffic for that group is forwarded to the device.
+
+IGMP is used to control the group memberships for multicast communication, ensuring that only the necessary devices receive the multicast data. IGMP Versions:
+- IGMPv1: Basic functionality to report multicast group membership.
+- IGMPv2: Introduced the ability for hosts to leave multicast groups.
+- IGMPv3: Allows for source-specific multicast (SSM), where a device can join a multicast group from a specific source.
+
+Understanding the security risks associated with IP protocols is crucial. There are several common network-based attacks that threaten the integrity, availability, and confidentiality of network communications. Here are some of the most common ones:
+
+1. **IP Hijacking (BGP Hijacking)**
+IP hijacking occurs when an attacker takes control of a portion of an IP address block. This can lead to traffic being misdirected to malicious systems, often used for surveillance or data theft. 
+- How it works: Attackers advertise a block of IP addresses they do not own through the Border Gateway Protocol (BGP), causing traffic to be routed through their malicious systems.
+- Impact: Data interception, denial of service (DoS), or man-in-the-middle (MitM) attacks.
+
+2. **Packet Sniffing**
+Packet sniffing is the practice of capturing and inspecting data packets transmitted across a network. This can be done by malicious users to gather sensitive information, such as login credentials or credit card numbers.
+- How it works: Tools like Wireshark can capture and analyze network traffic, including unencrypted data.
+- Impact: Exposure of sensitive data, identity theft, or credential theft.
+
+:bulb: Wireshark is a network protocol analyzer that captures and inspects data packets traveling through a network. It allows users to see the detailed contents of these packets, which can help troubleshoot network issues, monitor traffic, or analyze security incidents. The Key Steps of Wireshark Functionality are:
+
+Packet Capture:
+- Wireshark listens to network traffic on a specific network interface (like Wi-Fi or Ethernet).
+- It collects packets as they are sent or received by devices on the network.
+
+Packet Decoding:
+- Wireshark decodes these packets based on various network protocols (e.g., TCP, HTTP, DNS).
+- It displays detailed information, such as headers, payload, and protocol-specific data.
+
+Filtering and Analysis:
+- Users can apply filters to narrow down the captured data, focusing on specific traffic or protocols (e.g., HTTP, DNS).
+
+3. **Man-in-the-Middle (MitM) Attack**
+A MitM attack occurs when an attacker intercepts and potentially alters communication between two parties without their knowledge. The attacker may impersonate one or both parties.
+- How it works: An attacker may intercept traffic between a user and a server, such as during a DNS query or a login request.
+- Impact: Data theft, session hijacking, or altered data.
+
+4. **Distributed Denial of Service (DDoS) Attack**
+A DDoS attack is an attempt to overwhelm a target with a flood of internet traffic, often by utilizing a botnet of compromised devices.
+- How it works: Attackers direct massive amounts of traffic to a server, causing it to crash or become unresponsive.
+- Impact: Service disruption, downtime, loss of revenue.
+
+5. **SYN Flood Attack**
+A SYN flood is a type of Denial of Service (DoS) attack where an attacker sends a flood of SYN requests (part of the TCP handshake) to a target server, but never completes the handshake.
+- How it works: The server waits for the completion of the handshake, which consumes server resources, leading to exhaustion of available connections.
+- Impact: Server crashes, unavailability of services.
+
+### Open Questions ###
+
+1. What is an IP address, and why is it important?
+<details>
+  <summary>Show answer</summary>
+An IP address is a unique identifier assigned to devices on a network, enabling communication. It ensures data is sent to the correct destination, much like a mailing address for postal services.
+</details>
+
+2. What are the two main parts of an IP address?
+<details>
+  <summary>Show answer</summary>
+The network portion identifies the network, while the host portion identifies the specific device within that network. For example, in 192.168.1.100/24, "192.168.1" is the network, and "100" is the host.
+</details>
+
+3. What is subnetting, and why is it useful?
+<details>
+  <summary>Show answer</summary>
+Subnetting divides a large network into smaller sub-networks, improving performance and security. It allows efficient IP address allocation and isolates network segments to reduce congestion.
+</details>
+
+4. What is the difference between IPv4 and IPv6?
+<details>
+  <summary>Show answer</summary>
+IPv4 uses a 32-bit address space, allowing about 4.3 billion addresses, while IPv6 uses 128-bit addresses, providing an almost unlimited number of unique IPs. IPv6 also has built-in security features like IPSec.
+</details>
+
+5. What is NAT (Network Address Translation), and why is it needed?
+<details>
+  <summary>Show answer</summary>
+NAT allows multiple devices in a private network to share a single public IP address when accessing the internet. It helps conserve IPv4 addresses and adds a layer of security by masking internal IPs.
+</details>
+
+6. What is the purpose of ICMP?
+<details>
+  <summary>Show answer</summary>
+ICMP (Internet Control Message Protocol) is used for network diagnostics and error reporting. Tools like ping and traceroute rely on ICMP to check connectivity and track packet paths.
+</details>
+
+7. How does multicast differ from broadcast?
+<details>
+  <summary>Show answer</summary>
+Broadcast sends data to all devices in a network, causing unnecessary traffic, while multicast sends data only to selected group members, reducing bandwidth usage. Examples include IPTV and video streaming.
+</details>
+
+8. What is anycast, and how does it improve network efficiency?
+<details>
+  <summary>Show answer</summary>
+Anycast routes data to the nearest server in a group using the same IP, improving speed and reliability. It is used in DNS services and content delivery networks (CDNs) to reduce latency.
+</details>
+
+9. What is the role of IGMP in multicast communication?
+<details>
+  <summary>Show answer</summary>
+IGMP (Internet Group Management Protocol) allows devices to join and leave multicast groups. Routers use IGMP to forward multicast traffic only to interested devices, optimizing bandwidth usage.
+</details>
+
+10. What are the security risks associated with IP protocols?
+<details>
+  <summary>Show answer</summary>
+Attackers can exploit network protocols using techniques like IP spoofing, ICMP flooding, and rogue router advertisements in IPv6. Proper security configurations, such as firewalls and filtering rules, help mitigate these risks.
+</details>
+
+---
