Update 4.1 Apply secure design principles in network architectures.md

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -516,3 +516,153 @@ Attackers can exploit network protocols using techniques like IP spoofing, ICMP 
 </details>
 
 ---
+
+## 4.1.3 Secure protocols (e.g., Internet Protocol Security (IPSec), Secure Shell (SSH), Secure Sockets Layer (SSL)/ Transport Layer Security (TLS)) ##
+
+There are several protocols designed to safeguard data, prevent unauthorized access, and ensure confidentiality and integrity during transmission. These secure protocols provide varying levels of security services and are used in different contexts, depending on the application and requirements.
+
+**Internet Protocol Security (IPSec)**
+
+IPSec is a framework of open standards used to secure Internet Protocol (IP) communications by authenticating and encrypting each IP packet in a communication session. It operates at the network layer (Layer 3) of the OSI model and is primarily used to protect IP traffic over an IP network, ensuring that data exchanged between devices remains secure. IPSec is commonly used for Virtual Private Networks (VPNs) and is integral in providing a secure connection over untrusted networks like the internet.
+
+IPSec operates in two modes: Transport Mode and Tunnel Mode. In **Transport Mode**, only the payload of the IP packet (the actual data) is encrypted and/or authenticated, while the header remains intact. This mode is typically used for end-to-end communications between two hosts. On the other hand, **Tunnel Mode** encrypts both the payload and the header of the IP packet. This mode is more commonly used in site-to-site VPNs where entire packets are encrypted, thus ensuring that both the sender’s and receiver’s IP addresses are hidden, making the data secure as it traverses between networks.
+
+The security services provided by IPSec include confidentiality (through encryption), integrity (by using hashing algorithms such as SHA), and authentication (via protocols like ISAKMP and IKE). These services are achieved through two main protocols: Authentication Header (AH), which provides data integrity and authentication, and Encapsulating Security Payload (ESP), which offers encryption for confidentiality.
+
+:bulb: How IPsec Works:
+Security Associations (SA): IPsec uses Security Associations to define the parameters for the secure communication between two devices. Each SA has a unique identifier and specifies how the data will be encrypted and authenticated.
+
+Protocols:
+- AH (Authentication Header): Ensures data integrity and authenticity by providing a checksum of the packet data.
+- ESP (Encapsulating Security Payload): Provides encryption for data confidentiality along with optional data integrity and authentication.
+
+Modes:
+- Transport Mode: Encrypts only the data portion of the IP packet, leaving the header unchanged. Typically used for end-to-end communication between hosts.
+- Tunnel Mode: Encrypts the entire IP packet, including the header, which is then encapsulated in a new IP packet. Used for network-to-network communication, such as site-to-site VPNs.
+
+Key Exchange:
+IKE (Internet Key Exchange): A protocol used to securely exchange encryption keys between the two endpoints.
+
+**Secure Shell (SSH)**
+
+Secure Shell (SSH) is a protocol designed to provide a secure method of remote login and other network services over an unsecured network, like the internet. SSH operates at the application layer (Layer 7) and is commonly used for remote administration of network devices and servers, replacing older protocols like Telnet, which transmit data, including usernames and passwords, in plain text.
+
+SSH ensures the confidentiality and integrity of the data through encryption. It uses symmetric encryption (such as AES) for encrypting the communication, asymmetric encryption (such as RSA) for authenticating the client and server, and message authentication codes (MACs) to verify the integrity of the transmitted data. The use of encryption ensures that even if the communication is intercepted, the information cannot be read without the decryption key.
+
+One of the key features of SSH is its public key authentication mechanism. This allows a client to authenticate to a server using a private-public key pair instead of traditional password authentication. The private key remains on the client’s device, while the public key is stored on the server. When a client attempts to connect, the server uses the public key to authenticate the client, ensuring that only the client with the corresponding private key can access the system.
+SSH also provides a secure channel for port forwarding, allowing encrypted tunnels to be established for other types of communication, such as remote desktop services or file transfers. Secure Copy (SCP) and Secure File Transfer Protocol (SFTP), both of which operate over SSH, offer secure methods for transferring files between systems.
+
+| Feature                  | Description                                                                                                                                       |
+|---------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Protocol**              | Secure Shell (SSH)                                                                                                                               |
+| **Purpose**               | Provides a secure method of remote login and network services over an unsecured network (like the internet).                                      |
+| **OSI Layer**             | Application Layer (Layer 7)                                                                                                                      |
+| **Replaces**              | Older protocols like Telnet, which transmitted data in plain text.                                                                                |
+| **Encryption**            | - Symmetric encryption (e.g., AES) for communication <br> - Asymmetric encryption (e.g., RSA) for authentication <br> - MACs for integrity        |
+| **Confidentiality**       | Ensures data confidentiality via encryption, making intercepted data unreadable without the decryption key.                                       |
+| **Public Key Authentication** | Uses a private-public key pair for client-server authentication, with the private key on the client’s device and the public key on the server. |
+| **Key Authentication Mechanism** | The server authenticates the client using the public key, ensuring only the client with the corresponding private key can access the system.   |
+| **Port Forwarding**       | Provides a secure channel for port forwarding, allowing encrypted tunnels for services like remote desktop or file transfers.                      |
+| **File Transfer Protocols** | Secure Copy (SCP) and Secure File Transfer Protocol (SFTP) operate over SSH, providing secure methods for file transfers.                        |
+
+**Secure Sockets Layer (SSL) and Transport Layer Security (TLS)**
+
+SSL and its successor, TLS, are cryptographic protocols that provide security for communications over a computer network. While SSL is now considered deprecated due to various vulnerabilities, TLS continues to be the dominant protocol used to secure web traffic. Both SSL and TLS function primarily at the transport layer (Layer 4), securing data exchanged between clients and servers, particularly in web applications, through HTTPS.
+The primary function of SSL/TLS is to provide confidentiality and integrity for data in transit. This is achieved through a combination of asymmetric encryption for key exchange, symmetric encryption for encrypting the data, and message authentication codes (MACs) for ensuring integrity. The process begins with the handshake protocol, during which the client and server agree on encryption algorithms, authenticate each other (through public-key certificates), and establish shared keys. Once the handshake is complete, the actual data transfer occurs using symmetric encryption, which is faster than asymmetric encryption and more suited for transmitting large amounts of data.
+One of the most critical aspects of SSL/TLS is authentication. The server typically presents a digital certificate to the client, which is issued by a trusted certificate authority (CA). This certificate includes the public key of the server, allowing the client to verify the server's identity and ensure that it is communicating with the intended entity. SSL/TLS also supports forward secrecy, ensuring that even if a private key is compromised in the future, past communications cannot be decrypted.
+SSL/TLS is used not only for securing web traffic but also for securing other protocols such as email (SMTP, IMAP, POP3) and file transfer (FTPS), making it an essential protocol for safeguarding the vast majority of internet-based communications.
+
+| Feature             | Description                                                                                                                                              |
+|----------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Protocol**         | Transport Layer Security (TLS)                                                                                                                          |
+| **Purpose**          | Provides confidentiality and integrity for data in transit.                                                                                             |
+| **Replaces**         | TLS                                                                                                                                                      |
+| **Encryption**       | - Asymmetric encryption for key exchange <br> - Symmetric encryption for encrypting data <br> - Message Authentication Codes (MACs) for integrity        |
+| **Handshake Protocol** | Initial communication where client and server agree on encryption algorithms, authenticate each other, and establish shared keys.                       |
+| **Data Transfer**    | After the handshake, symmetric encryption is used for data transfer, providing faster encryption for large amounts of data.                              |
+| **Authentication**   | The server presents a digital certificate, issued by a trusted certificate authority (CA), to verify its identity.                                       |
+| **Forward Secrecy**  | Ensures that if a private key is compromised in the future, past communications cannot be decrypted.                                                     |
+| **Usage**            | - Secures web traffic (HTTPS) <br> - Secures email protocols (SMTP, IMAP, POP3) <br> - Secures file transfer (FTPS)                                      |
+
+
+**Kerberos**
+
+Kerberos is a network authentication protocol designed to provide secure authentication over insecure networks. Unlike the protocols mentioned earlier, which are mainly focused on securing the communication channel itself, Kerberos primarily addresses the need for secure authentication between users and services in a networked environment. It uses a symmetric key cryptography system to enable users and services to prove their identity securely without transmitting passwords over the network.
+Kerberos operates on the basis of tickets. When a user logs in, they are authenticated by the Kerberos Key Distribution Center (KDC), which consists of two components: the Authentication Server (AS) and the Ticket Granting Server (TGS). The process begins with the user requesting access to a service. The AS verifies the user’s credentials (such as their password) and issues a Ticket Granting Ticket (TGT). The TGT is then used to request service-specific tickets from the TGS. These service tickets can be presented to the target service to authenticate the user, without needing to transmit passwords.
+The use of timestamps and one-time tickets ensures that Kerberos protects against replay attacks, and the session keys provided during authentication help maintain confidentiality and integrity during subsequent communications. Kerberos provides mutual authentication, ensuring both the client and the server prove their identity to each other, which reduces the risk of man-in-the-middle attacks.
+Kerberos is widely used in enterprise environments, particularly in Windows-based networks, to manage user authentication in environments like Active Directory. By reducing the need for password transmission and using encrypted tickets, Kerberos helps ensure that sensitive authentication data remains secure.
+
+<img width="553" height="641" alt="K1" src="https://github.com/user-attachments/assets/5ed55bd2-6737-4912-a2d5-145e9b9ab7bd" />
+
+<img width="547" height="762" alt="K2" src="https://github.com/user-attachments/assets/3768d96b-ba42-444f-8d50-eda25bfd11cc" />
+
+<img width="554" height="747" alt="K3" src="https://github.com/user-attachments/assets/eeb6c556-4713-48e9-962c-9efe59f61abe" />
+
+<img width="548" height="467" alt="K4" src="https://github.com/user-attachments/assets/ab23dc0c-bed3-4a62-adf7-c67539b4d0e5" />
+
+### Open Questions ###
+
+1. What layer of the OSI model does IPSec operate at?
+<details>
+  <summary>Show answer</summary>
+IPSec operates at the Network Layer (Layer 3) of the OSI model. It secures IP communications by encrypting and authenticating packets, ensuring data integrity and confidentiality during transmission.
+</details>
+
+2. What are the two modes of IPSec operation, and how do they differ?
+<details>
+  <summary>Show answer</summary>
+IPSec has Tunnel Mode and Transport Mode, each providing different levels of security. Tunnel Mode encrypts the entire IP packet, including the header, making it ideal for VPNs, while Transport Mode only encrypts the payload, maintaining the original IP header for end-to-end communication.
+</details>
+
+3. What is the primary purpose of the Authentication Header (AH) in IPSec?
+<details>
+  <summary>Show answer</summary>
+The Authentication Header (AH) in IPSec provides authentication, integrity, and anti-replay protection for transmitted packets. However, it does not provide encryption, meaning data remains readable but protected against unauthorized modifications.
+</details>
+
+4. How does Secure Shell (SSH) ensure confidentiality and integrity of transmitted data?
+<details>
+  <summary>Show answer</summary>
+Secure Shell (SSH) ensures confidentiality and integrity of transmitted data by using strong encryption algorithms like AES and integrity checks via HMAC. This prevents eavesdropping, tampering, and man-in-the-middle attacks during remote access
+</details>
+
+5. What encryption methods does SSH use for authentication and data transfer?
+<details>
+  <summary>Show answer</summary>
+SSH uses public key authentication methods such as RSA, DSA, ECDSA, and Ed25519 for secure access control. For data transfer, it employs symmetric encryption like AES or ChaCha20, ensuring encrypted and tamper-proof communication.
+</details>
+
+6. What is the primary difference between SSL and TLS?
+<details>
+  <summary>Show answer</summary>
+The primary difference between SSL and TLS is that TLS is a more secure and modern replacement for SSL. TLS offers stronger encryption algorithms, improved handshake protocols, and better resistance to vulnerabilities like BEAST and POODLE attacks.
+</details>
+
+7. What role does the handshake protocol play in TLS?
+<details>
+  <summary>Show answer</summary>
+The TLS handshake protocol plays a critical role in securing communications by authenticating parties, negotiating encryption parameters, and establishing a secure session key. This process ensures that both the client and server trust each other before exchanging sensitive data.
+</details>
+
+8. How does Kerberos authenticate users without transmitting passwords over the network?
+<details>
+  <summary>Show answer</summary>
+Kerberos authenticates users without transmitting plaintext passwords by using ticket-based authentication and cryptographic timestamps. This prevents attackers from intercepting credentials and replaying them to gain unauthorized access.
+</details>
+
+9. What is the function of the Ticket Granting Ticket (TGT) in Kerberos?
+<details>
+  <summary>Show answer</summary>
+The Ticket Granting Ticket (TGT) in Kerberos acts as a temporary pass that allows users to request service tickets without repeatedly entering their credentials. This improves security and efficiency by reducing password exposure and authentication requests
+</details>
+
+10. Why is forward secrecy important in TLS, and how does it enhance security?
+<details>
+  <summary>Show answer</summary>
+Forward secrecy in TLS ensures that even if an attacker compromises a session key, they cannot decrypt past communications. This is achieved through ephemeral key exchanges like Diffie-Hellman, which generate unique session keys for each session, enhancing security against future key leaks.
+</details>
+
+---
+
+
+
